# PowerRANGES

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tmux.bash
args/: gbif_occurrence.bash  gbif_occurrence1.bash  gbif_occurrence2.bash  gbif_occurrence3.bash  gbif_occurrence4.bash  gbif_occurrence_all.bash  janitor.bash  more_data.bash
docs/: Ranges Traits and Definitions (copy of Original).ods  notes.md  traits.csv
notebooks/: explore_data.ipynb
ranges/: janitor.py  merge_totals.py  parse_gbif.py  summarize.py
ranges/pylib/: log.py  occurrence.py  occurrences.py  pipeline.py  tokenizer.py  trait_util.py
ranges/pylib/rules/: base.py  base_length.py  body_mass.py  delete.py  ear_length.py  embryo.py  embryo_length.py  female_state_shorthand.py  forearm_length.py  gonad.py  hind_foot_length.py  lactation_state.py  length_shorthand.py  life_stage.py  mammary.py  nipple.py  nipple_count.py  nipple_enlarged.py  nipple_state.py  number.py  ovary.py  placenta_scar_count.py  pregnancy_state.py  scrotal_state.py  sex.py  shorthand.py  shorthand_female_states.py  shorthand_lengths.py  tail_length.py  testicle.py  tibia_length.py  total_length.py  tragus_length.py  uuid.py  vagina_state.py
ranges/pylib/rules/terms/: body_mass_terms.csv  ear_length_terms.csv  embryo_count_terms.csv  embryo_length_terms.csv  forearm_length_terms.csv  gonad_terms.csv  hind_foot_length_terms.csv  lactation_state_terms.csv  (+16 more)
ranges/pylib/writers/: csv_writer.py  html_writer.py  json_writer.py  summary_writer.py
ranges/rules/: base.py  base_length.py  body_mass.py  calcar_length.py  delete.py  ear_length.py  embryo.py  female_state_shorthand.py  forearm_length.py  gonad.py  hind_foot_length.py  lactation_state.py  length_shorthand.py  life_stage.py  mammary.py  nipple.py  ovary.py  placenta_scar_count.py  pregnancy_state.py  sex.py  tail_length.py  testicle.py  thumb_length.py  tibia_length.py  total_length.py  tragus_length.py  vagina_state.py
ranges/rules/terms/: calcar_length_terms.csv  embryo_count_terms.csv  embryo_length_terms.csv  forearm_length_terms.csv  hind_foot_length_terms.csv  lactation_state_terms.csv  life_stage_terms.csv  mammary_terms.csv  ovary_terms.csv  pregnancy_state_terms.csv  tail_length_terms.csv  testicle_terms.csv  thumb_length_terms.csv  tibia_length_terms.csv  total_length_terms.csv  vagina_state_terms.csv
ranges/writers/: csv_writer.py  html_writer.py  json_writer.py
tests/: setup.py
tests/rules/: test_body_mass.py  test_ear_length.py  test_embryo.py  test_embryo_count.py  test_embryo_length.py  test_female_state_shorthand.py  test_forearm_length.py  test_gonad_size.py  test_hind_foot_length.py  test_lactation_state.py  test_length_shorthand.py  test_life_stage.py  test_mammary_count.py  test_mammary_state.py  test_nipple_count.py  test_nipple_enlarged.py  test_nipple_state.py  test_ovary_description.py  test_ovary_size.py  test_ovary_state.py  test_placental_scar_count.py  test_pregnancy_state.py  test_scrotal_state.py  test_sex.py  test_shorthand.py  test_shorthand_female_traits.py  test_shorthand_lengths.py  test_tail_length.py  test_testicle_description.py  test_testicle_size.py  test_testicle_state.py  test_tibia_length.py  test_total_length.py  test_tragus_length.py  test_uuid.py  test_vagina_state.py
(+3 files in other folders)
