[build-system]
requires = ["uv_build>=0.8.12"]
build-backend = "uv_build"

[project]
name = "PowerRANGES"
version = "0.1.0"
readme = "README.md"
description = ""
license = { file = "LICENSE" }
authors = [{ name = "Raphael LaFrance", email = "raphael.lafrance@gmail.com" }]
requires-python = "==3.13.*"
dependencies = [
    "Jinja2",
    "jupyter",
    "pandas",
    "regex",
    "spacy",
    "sqlglot>=30.1.0",
    "tqdm",
    "uv-build>=0.11.2",
]

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "ruff>=0.15.8",
  "sqlglot>=30.2.1",
  "ty>=0.0.1a27",
  "uv-build>=0.9.5",
]

[tool.uv.build-backend]
module-root = "."
module-name = "ranges"

[tool.ty.rules]
not-subscriptable = "ignore"

[tool.ruff]
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]

select = ["ALL"]

ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "COM812",  # Trailing comma missing
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in public method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in public method
  "D107",    # Missing docstring in public __init__
  "D203",    # 1 blank line required before class docstring
  "D205",    # 1 blank line required between summary line and description
  "D212",    # Multi-line docstring summary should start at the first line
  "DTZ005",  # Pass a `datetime.timezone` object to the `tz` parameter
  "DTZ011",  # datetime.date.today() used
  "EM102",   # Exception must not use an f-string literal, assign to variable first
  "ERA001",  # Remove commented-out code
  "FA102",   # Missing `from __future__ import annotations`, but uses PEP 604 union
  "FIX002",  # Line contains TODO
  "G004",    # Logging statement uses f-string
  "LOG015",  # Do not use root logger (DELETE ME)
  "N815",    # Variable in class scope should not be mixedCase
  "N818",    # Exception name {name} should be named with an Error suffix
  "PLR0913", # Too many arguments in function definition ({c_args} > {max_args})
  "PLR0915", # Too many statements (x > 50)
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
  "PT009",   # Use a regular assert instead of unittest-style {assertion}
  "RET504",  # Unnecessary assignment to {name} before return statement
  "RUF001",  # Ambiguous quote character in string
  "RUF002",  # Docstring contains ambiguous `‘`
  "S602",    # subprocess` call with `shell=True` identified, security issue
  "S607",    # Starting a process with a partial executable path
  "S608",    # Possible SQL injection vector through string-based query construction
  "SIM114",  # Combine if branches using logical or operator
  "SLF001",  # Private member accessed: {access}
  "T201",    # print found
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
  "TRY003",  # Avoid specifying long messages outside the exception class
]
